@@ -1,2 +1,2 @@
-#define VERSION  "version " PACKAGE_VERSION " [6-Jun-2021]"
+#define VERSION  "version " PACKAGE_VERSION " [13-Jun-2021]"
 #define BUG_ADDRESS "issue@texjp.org"
