@@ -1,3 +1,13 @@
+2021-06-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* fwrite.c: Avoid segmentation fault for unwritable fopen.
+	Recognize symhead_{positive,negative} for non-default
+	character_order. 
+	* pageread.c, styfile.c: Exit code 255 for non-existent
+	style/log file.
+	* version.h: Date [13-Jun-2021], but still Version 3.5 (bugfix
+	only).
+
 2021-06-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* configure.ac, version.h:
